--- a/dali/pom.xml
+++ b/dali/pom.xml
@@ -62,7 +62,15 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <maven.compiler.source>1.6</maven.compiler.source>
     </properties>
+<distributionManagement>
 
+        <repository>
+            <id>nexus</id>
+            <name>nexus</name>
+            <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+        </repository>
+
+    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
